--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,9 @@
-<h1>No restaurants yet!</h1>
-<a href='#'>Add a restaurant</a>
+<% if Restaurant.all.any? %>
+    <% Restaurant.all.each do |restaurant| %>
+        <h2><%= restaurant.name %></h2>
+    <% end %>
+<% else %>
+    <h1>No restaurants yet</h1>
+<% end %>
+
+<a href="#">Add a restaurant</a>
