--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,11 @@
 <% if Restaurant.all.any? %>
     <% @restaurants.each do |restaurant| %>
         <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+        <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <% end %>
 <% else %>
     <h1>No restaurants yet</h1>
 <% end %>
 
 <%= link_to 'Add a restaurant', new_restaurant_path %>
+
