moving into devise and adding validation reviews and autofocus

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -13,6 +13,6 @@
 
 <%= form_for @restaurant do |f| %>
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :autofocus=>true %>
     <%= f.submit %>
 <% end %>
